Removed bg images because of dark mode issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 html, body {
     height: 100vh;
-    background-image: url("../img/bg-light.jpeg");
 }
 
 .movie-poster {
@@ -44,8 +43,7 @@ html, body {
 }
 
 [data-theme="dark"] {
-    background-image: url("../img/bg-dark.jpeg") !important;
-    background-color: #212529;
+    background-color: #212529 !important;
     color: #eee;
 }
 
